tests/parser/function-expression-left-paren-error.stderr
error: expected '('
 --> $DIR/function-expression-left-paren-error.lox:1:4
  |
1 | fn 5() {}
  |    ^
